# parallellm-qa

./: .cursorignore  .dockerignore  .gitignore  README.md  pyproject.toml
aws/qa-monitor/: Makefile  params.example.json  stack.yaml
aws/qa-monitor/templates/: ec2-instance.yaml  sns-topic.yaml
config/: state.yaml
config/secret/: logins.yaml.env.eg
docker/: Dockerfile  container_cron  entrypoint.sh
src/: monitor.py  run_chats.py  run_login.py
src/utils/: files.py  selenium.py  tools.py
